Frontend | prevent ScrollBar for adding on width

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -22,7 +22,7 @@
   }
 
   html {
-    @apply min-h-screen bg-gray-900;
+    @apply min-h-screen bg-gray-900 overflow-scroll;
   }
 
   body {
